修改格式前